k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ostadchess-dev
  labels:
    app.kubernetes.io/name: ostadchess
    app.kubernetes.io/environment: dev
