k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chessvector-ui
  namespace: ostadchess-dev
spec:
  ingressClassName: traefik
  rules:
    - host: chessvector.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-ui
                port:
                  number: 3000
    - host: www.chessvector.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-ui
                port:
                  number: 3000
    - host: api.chessvector.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-gateway-service
                port:
                  number: 8000
